# petty

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Claude.md  EXAMPLES.md  TEMPLATES.md  USAGE.md  WASM.md  agents.md  css_dimensions_template.json  readme.md
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/core/: mod.rs
crates/core/src/parser/: error.rs  mod.rs  processor.rs  readme.md  style.rs  stylesheet_parser.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  rayon_executor.rs
crates/json-template/: Cargo.toml
crates/json-template/src/: ast.rs  compiler.rs  error.rs  executor.rs  lib.rs  processor.rs  style_deser.rs
crates/layout/: Cargo.toml
crates/layout/src/: builder.rs  cache.rs  config.rs  elements.rs  engine.rs  fonts.rs  integration_test.rs  interface.rs  lib.rs  list_test.rs  node_kind.rs  output.rs  perf.rs  style.rs  style_test.rs  test_utils.rs  text_test.rs  util.rs
crates/layout/src/algorithms/: flex_solver.rs  mod.rs  pagination.rs  table_solver.rs
crates/layout/src/nodes/: block.rs  block_split_test.rs  block_test.rs  flex.rs  flex_break_test.rs  flex_test.rs  heading.rs  image.rs  image_test.rs  index_marker.rs  index_marker_test.rs  list.rs  list_item.rs  list_test.rs  list_utils.rs  mod.rs  page_break.rs  paragraph_utils.rs  table_solver.rs  table_test.rs  taffy_utils.rs
crates/layout/src/nodes/paragraph/: builder.rs  layout.rs  mod.rs  node.rs
crates/layout/src/nodes/table/: builder.rs  mod.rs  node.rs  pagination.rs
crates/layout/src/painting/: box_painter.rs  mod.rs
crates/layout/src/text/: builder.rs  mod.rs  shaper.rs  wrapper.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: error.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/render-lopdf/: Cargo.toml
crates/render-lopdf/src/: helpers.rs  lib.rs  renderer.rs  writer.rs
crates/template-core/: Cargo.toml
crates/template-core/src/: lib.rs
crates/template-dsl/: Cargo.toml
crates/template-dsl/src/: block.rs  control.rs  image.rs  lib.rs  list.rs  misc.rs  node.rs  paragraph.rs  style.rs  table.rs  template.rs  tests.rs  text.rs  widgets.rs
crates/wasm/: Cargo.toml  README.md  test-local.sh
crates/wasm/integration-tests/: .gitignore  README.md  package.json
crates/wasm/integration-tests/test/: pdf-generation.test.js
crates/wasm/src/: builder.rs  error.rs  fonts.rs  lib.rs  pipeline.rs  resources.rs  types.rs
crates/wasm/tests/: web.rs
crates/xpath31/: Cargo.toml
crates/xpath31/src/: ast.rs  engine.rs  error.rs  lib.rs  operators.rs  parser.rs
crates/xpath31/src/functions/: boolean.rs  core.rs  datetime.rs  hof.rs  json.rs  math.rs  mod.rs  numeric.rs  regex.rs  sequence.rs  string.rs
crates/xpath31/src/types/: array.rs  atomic.rs  function.rs  map.rs  mod.rs  sequence.rs
crates/xslt/: Cargo.toml
crates/xslt/src/: ast.rs  buffering_builder.rs  compiler.rs  error.rs  executor.rs  idf_builder.rs  lib.rs  output.rs  parser.rs  pattern.rs  processor.rs  util.rs
crates/xslt/src/compiler_handlers/: control_flow.rs  loops.rs  mod.rs  stylesheet.rs  table.rs  template.rs  variables.rs
crates/xslt/src/datasources/: json.rs  mod.rs  xml.rs
crates/xslt/src/executor_handlers/: apply_templates.rs  call_template.rs  control_flow.rs  copy.rs  for_each.rs  literals.rs  mod.rs  table.rs  variables.rs
crates/xslt3/: Cargo.toml
crates/xslt3/benches/: xslt3_bench.rs
crates/xslt3/src/: ast.rs  compiler.rs  error.rs  executor.rs  lib.rs  processor.rs  resolver.rs  tests.rs
crates/xslt3/src/compiler_handlers/: control_flow.rs  loops.rs  mod.rs  streaming.rs  stylesheet.rs  variables.rs  xslt3_elements.rs
crates/xslt3/src/executor_handlers/: accumulators.rs  control_flow.rs  diagnostics.rs  literals.rs  loops.rs  mod.rs  output.rs  streaming_instructions.rs  variables.rs  xslt3_elements.rs
crates/xslt3/src/streaming/: accumulator.rs  analysis.rs  context.rs  event_model.rs  executor.rs  mod.rs
examples/pdf_service/: Cargo.toml  README.md  TESTING.md  docker-compose.yml  test-api.py  test-api.sh
examples/pdf_service/config/: default.toml
examples/pdf_service/migrations/: 001_init.sql
examples/pdf_service/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  test_client.rs
examples/pdf_service/src/api/: async_handler.rs  health.rs  mod.rs  sync_handler.rs
examples/pdf_service/src/jobs/: mod.rs  models.rs  queue.rs  worker.rs
examples/pdf_service/src/middleware/: auth.rs
examples/pdf_service/src/pipeline/: manager.rs  mod.rs
examples/pdf_service/src/storage/: backend.rs  filesystem.rs  mod.rs
examples/pdf_service/templates/: invoice.xsl  sample_invoice_data.json
examples/pdf_service/tests/: integration_test.rs
petty-core/: Cargo.toml
petty-core/src/: lib.rs  types.rs
petty-core/src/core/idf/: mod.rs
petty-core/src/core/layout/: README.MD  builder.rs  cache.rs  elements.rs  engine.rs  fonts.rs  integration_test.rs  mod.rs  node_kind.rs  perf.rs  style.rs  style_test.rs
petty-core/src/core/layout/nodes/: flex.rs  heading.rs  image.rs  list.rs  mod.rs  paragraph_utils.rs  table_test.rs
petty-core/src/core/layout/text/: builder.rs  shaper.rs
petty-core/src/core/style/: agents.md  color.rs  flex.rs  font.rs  list.rs  mod.rs
petty-core/src/parser/: agents.md  error.rs  mod.rs  processor.rs  style.rs  style_parsers.rs
petty-core/src/parser/json/: agent.md  mod.rs
petty-core/src/parser/json/jpath/: readme.md
petty-core/src/parser/xslt/: ast.rs  compiler.rs  executor.rs  idf_builder.rs  mod.rs  output.rs
petty-core/src/parser/xslt/compiler_handlers/: control_flow.rs  loops.rs  stylesheet.rs  table.rs  variables.rs
petty-core/src/parser/xslt/datasource/: mod.rs
petty-core/src/parser/xslt/executor_handlers/: call_template.rs  copy.rs  for_each.rs  mod.rs  table.rs  variables.rs
petty-core/src/parser/xslt/json_ds/: mod.rs
petty-core/src/render/: lopdf_helpers.rs  lopdf_renderer.rs  mod.rs  pdf.rs  renderer.rs  streaming_writer.rs
petty-core/src/render/drawing/: image.rs  text.rs
petty-core/src/traits/: font.rs  mod.rs
(+358 files in other folders)
