[package]
name = "petty"
version = "0.1.0"
edition = "2024"

[dependencies]
# PDF generation
lopdf = "0.36.0"
printpdf = { version = "0.8.2", features = ["png"] }
tempfile = "3.19.1"
nom = "7.1"
cosmic-text="0.14.2"
roxmltree = "0.20.0"
# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.1", features = ["png", "jpeg", "gif"] }
fontdb = "0.23.0"

# Template engines
handlebars = "6.3.2"
quick-xml = { version = "0.37.5", features = ["serialize"] }

# Font handling
fontdue = "0.9.0"
lru = "0.12.3"

# Utilities & Async
thiserror = "2.0.12"
rand = "0.9.1"
slug = "0.1"
log = "0.4"
num_cpus = "1.16"
env_logger = "0.11"
tokio = { version = "1.44.2", features = ["macros", "rt", "sync", "rt-multi-thread"] }
async-channel = "2.2.0"
itoa = "1.0.15"
itertools = "0.14.0"
once_cell = "1.21.3"
chrono = "0.4.42"

[dev-dependencies]
dhat = { version = "0.3"}
tempfile = "3.10.1"
fontdb = "0.23.0"

[features]
dhat-heap = []

[[example]]
name = "performance_test"
path = "examples/performance_test.rs"

[[example]]
name = "xslt_invoice"
path = "examples/xslt_invoice.rs"

[[example]]
name = "cv"
path = "examples/cv.rs"

[[example]]
name = "xslt_financial_report"
path = "examples/xslt_financial_report.rs"

[[example]]
name = "json_report"
path = "examples/json_report.rs"

[[example]]
name = "compiled_performance_test"
path = "examples/compiled_performance_test.rs"

[[example]]
name = "toc"
path = "examples/xslt_toc.rs"

[[example]]
name = "perf_toc"
path = "examples/perf_toc.rs"
