[workspace]
members = [
    # Foundation crates
    "crates/types",
    "crates/style",
    "crates/idf",
    "crates/traits",
    # Algorithm crates
    "crates/xpath1",
    "crates/layout",
    "crates/jpath",
    # Template crates
    "crates/template-core",
    "crates/json-template",
    "crates/xslt",
    # Render crates
    "crates/render-core",
    "crates/render-lopdf",
    "crates/pdf-composer",
    # Platform crates
    "crates/executor",
    "crates/source",
    "crates/resource",
    "crates/template-dsl",
    # Integration layer
    "crates/core",
    # WASM bindings
    "crates/wasm",
]
resolver = "2"

[package]
name = "petty"
version = "0.1.0"
edition = "2024"
description = "High-performance PDF generation engine with pluggable executors and resource providers"

[dependencies]
# Foundation crates
petty-types = { path = "crates/types" }
petty-style = { path = "crates/style" }
petty-idf = { path = "crates/idf" }
petty-traits = { path = "crates/traits" }

# Algorithm crates
petty-xpath1 = { path = "crates/xpath1" }
petty-layout = { path = "crates/layout" }
petty-jpath = { path = "crates/jpath" }

# Template crates
petty-template-core = { path = "crates/template-core" }
petty-json-template = { path = "crates/json-template" }
petty-xslt = { path = "crates/xslt" }

# Render crates
petty-render-core = { path = "crates/render-core" }
petty-render-lopdf = { path = "crates/render-lopdf" }
petty-pdf-composer = { path = "crates/pdf-composer" }

# Core library (integration layer)
petty-core = { path = "crates/core" }

# Platform crates
petty-executor = { path = "crates/executor" }
petty-source = { path = "crates/source" }
petty-resource = { path = "crates/resource" }
petty-template-dsl = { path = "crates/template-dsl" }

# Platform-specific dependencies (stay in petty crate)
# System allocator
mimalloc = "0.1"
memory-stats = "1.0"

# System info
num_cpus = "1.16"

# Async runtime (feature-gated in future)
tokio = { version = "1.44.2", features = ["macros", "rt", "sync", "rt-multi-thread"] }
async-channel = "2.2.0"

# Parallel execution
rayon = { version = "1.10", optional = true }

# System font discovery
fontdb = "0.23.0"

# Logging implementation
env_logger = "0.11"
log = "0.4"

# Re-export dependencies needed by both crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

# Additional deps used in pipeline/templating
printpdf = { version = "0.8.2", default-features = false, features = ["png"] }
itertools = "0.14.0"
lopdf = { version = "0.36.0", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "wasmbind"] }
rand = "0.9.1"
slug = "0.1"
bumpalo = "3.17.0"

# Temporary file support (native platforms only, for memory efficiency)
tempfile = { version = "3.10.1", optional = true }

[dev-dependencies]
dhat = { version = "0.3" }
tempfile = "3.10.1"
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["native", "rayon-executor"]
dhat-heap = []

# Performance profiling - enables timing measurements in layout engine
# Adds ~1.5MB to binary and runtime overhead. Use only for debugging.
profiling = ["petty-layout/profiling"]

# Platform features
native = ["tempfile"]  # Enables system fonts, filesystem, tempfiles, etc.

# Executor features
rayon-executor = ["rayon"]

# Font features (for future phases)
# embedded-fonts = []

[[example]]
name = "performance_test"
path = "examples/performance_test.rs"

[[example]]
name = "xslt_invoice"
path = "examples/xslt_invoice.rs"

[[example]]
name = "cv"
path = "examples/cv.rs"

[[example]]
name = "xslt_financial_report"
path = "examples/xslt_financial_report.rs"

[[example]]
name = "json_report"
path = "examples/json_report.rs"

[[example]]
name = "compiled_performance_test"
path = "examples/compiled_performance_test.rs"

[[example]]
name = "toc"
path = "examples/xslt_toc.rs"

[[example]]
name = "perf_toc"
path = "examples/perf_toc.rs"

[[example]]
name = "json_css_dimensions"
path = "examples/json_css_dimensions.rs"
