[package]
name = "petty-core"
version = "0.1.0"
edition = "2024"
description = "Platform-agnostic PDF generation core - layout, parsing, and rendering"

[dependencies]
# PDF generation (platform-agnostic, uses Write trait)
lopdf = "0.36.0"
# TODO: Phase 2 - Abstract printpdf usage behind trait
printpdf = { version = "0.8.2", features = ["png"] }

# Layout engine
taffy = "0.8.1"
bumpalo = "3.17.0"

# Text shaping and fonts (platform-agnostic - works with font bytes)
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
# System font discovery (optional - for native platforms only)
# FontProvider abstraction allows custom font sources without fontdb
fontdb = { version = "0.23.0", optional = true }

# Parsing
nom = "7.1"
roxmltree = "0.20.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
handlebars = "6.3.2"

# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "gif"] }

# Utilities
thiserror = "2.0.12"
log = "0.4"
itoa = "1.0.15"
itertools = "0.14.0"
once_cell = "1.21.3"
slug = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }

# WASM support: getrandom requires wasm_js feature for wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["system-fonts"]

# System font discovery via fontdb (native platforms only)
# Disable this for WASM or when using custom FontProvider only
system-fonts = ["fontdb"]

# For WASM compatibility - no system fonts or filesystem
wasm = []

# Performance profiling
profiling = []
