[package]
name = "petty-core"
version = "0.1.0"
edition = "2024"
description = "Platform-agnostic PDF generation core - layout, parsing, and rendering"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }
petty-traits = { path = "../traits" }

# Algorithm crates
petty-xpath1 = { path = "../xpath1" }
petty-layout = { path = "../layout", features = ["system-fonts"] }

# Template abstractions
petty-template-core = { path = "../template-core" }

# Render abstractions
petty-render-core = { path = "../render-core" }

# PDF generation (platform-agnostic, uses Write trait)
lopdf = { version = "0.39.0", default-features = false }
# Alternative PDF renderer (currently unused, kept as reference implementation)
printpdf = { version = "0.8.2", features = ["png"], optional = true }

# Layout engine
taffy = "0.9.2"
bumpalo = "3.19.1"

# Text shaping and fonts (platform-agnostic - works with font bytes)
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
# System font discovery (optional - for native platforms only)
# FontProvider abstraction allows custom font sources without fontdb
fontdb = { version = "0.23.0", optional = true }

# Parsing
nom = "8.0"
roxmltree = "0.21.1"
quick-xml = { version = "0.39.0", features = ["serialize"] }
handlebars = "6.4.0"

# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif"] }

# Utilities
thiserror = "2.0.17"
log = "0.4"
itoa = "1.0.17"
itertools = "0.14.0"
once_cell = "1.21.3"
slug = "0.1"
chrono = { version = "0.4.43", default-features = false, features = ["wasmbind"] }

# WASM support: getrandom requires wasm_js feature for wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["system-fonts", "printpdf"]

# System font discovery via fontdb (native platforms only)
# Disable this for WASM or when using custom FontProvider only
system-fonts = ["fontdb"]

# For WASM compatibility - excludes system fonts and filesystem access
wasm = []

# Performance profiling
profiling = []
