[package]
name = "petty-json-template"
version = "0.1.0"
edition = "2024"
description = "JSON template engine with JPath expressions"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }

# Algorithm crates
petty-jpath = { path = "../jpath" }

# Template abstractions
petty-template-core = { path = "../template-core" }

# External
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
log = "0.4"
itertools = "0.14.0"

[dev-dependencies]
serde_json = "1.0"
