[package]
name = "petty-layout"
version = "0.1.0"
edition = "2024"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }
petty-traits = { path = "../traits" }

# Layout algorithms
bumpalo = "3.19.1"
taffy = "0.9.2"

# Text shaping and fonts
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
fontdb = { version = "0.23.0", optional = true }

# Error handling
thiserror = "2.0.17"

# Logging
log = "0.4"

[features]
default = ["system-fonts"]

# System font discovery via fontdb (native platforms only)
system-fonts = ["fontdb"]

# Performance profiling
profiling = []
