[package]
name = "petty-render-core"
version = "0.1.0"
edition = "2024"
description = "Core rendering abstractions for PDF generation"

[dependencies]
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }
petty-layout = { path = "../layout" }
handlebars = "6.4.0"
thiserror = "2.0.17"
