[package]
name = "petty-render-lopdf"
version = "0.1.0"
edition = "2024"
description = "High-performance PDF renderer using lopdf"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }

# Algorithm crates
petty-layout = { path = "../layout" }

# Render crates
petty-render-core = { path = "../render-core" }

# External
lopdf = "0.36.0"
thiserror = "2.0.12"
log = "0.4"
once_cell = "1.21.3"
