[package]
name = "petty-render-lopdf"
version = "0.1.0"
edition = "2024"
description = "High-performance PDF renderer using lopdf"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }

# Algorithm crates
petty-layout = { path = "../layout" }

# Render crates
petty-render-core = { path = "../render-core" }

# External
lopdf = { version = "0.38.0", default-features = false }
thiserror = "2.0.17"
log = "0.4"
once_cell = "1.21.3"
