[package]
name = "petty-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for Petty PDF generation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"
console_error_panic_hook = "0.1"

# Logging
log = "0.4"

# Core petty crates (platform-agnostic)
petty-core = { path = "../core", default-features = false }
petty-traits = { path = "../traits" }
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }
petty-layout = { path = "../layout", default-features = false }
petty-render-core = { path = "../render-core" }
petty-render-lopdf = { path = "../render-lopdf" }
petty-json-template = { path = "../json-template" }
petty-template-core = { path = "../template-core" }
petty-template-dsl = { path = "../template-dsl" }
petty-source = { path = "../source" }

# WASM random number generation
getrandom = { version = "0.3", features = ["wasm_js"] }

# PDF generation (for lopdf dictionary macro)
lopdf = { version = "0.38.0", default-features = false }

[features]
default = ["embedded-fonts"]

# Include Liberation fonts in the binary
embedded-fonts = []

# Enable console logging (larger binary)
console-logging = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
