[package]
name = "petty-xpath31"
version = "0.1.0"
edition = "2024"
description = "XPath 3.1 implementation for the Petty PDF engine"

[dependencies]
petty-xpath1 = { path = "../xpath1" }
nom = "8.0"
thiserror = "2.0.17"
rust_decimal = "1.40"
indexmap = "2.13"
serde_json = "1.0"
regex = "1.12"
quick-xml = { version = "0.39.0", features = ["serialize"] }

[dev-dependencies]
roxmltree = "0.21.1"
