[package]
name = "petty-xslt"
version = "0.1.0"
edition = "2024"
description = "XSLT 1.0 template processor with XML and JSON data source support"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }

# Algorithm crates
petty-xpath1 = { path = "../xpath1" }

# Template abstractions
petty-template-core = { path = "../template-core" }

# External
roxmltree = "0.20.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
log = "0.4"
nom = "7.1"
nom_locate = "4.2"

[dev-dependencies]
roxmltree = "0.20.0"
serde_json = "1.0"
