[package]
name = "petty-xslt"
version = "0.1.0"
edition = "2024"
description = "XSLT 1.0 template processor with XML and JSON data source support"

[dependencies]
# Foundation crates
petty-types = { path = "../types" }
petty-style = { path = "../style" }
petty-idf = { path = "../idf" }

# Algorithm crates
petty-xpath1 = { path = "../xpath1" }

# Template abstractions
petty-template-core = { path = "../template-core" }

# External
roxmltree = "0.21.1"
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
log = "0.4"
nom = "8.0"
nom_locate = "5.0"

[dev-dependencies]
roxmltree = "0.21.1"
serde_json = "1.0"
