[package]
name = "pdf-service"
version = "0.1.0"
edition = "2021"
default-run = "pdf-service"

[dependencies]
# Petty PDF generator
petty = { path = "../.." }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"

# Async utilities
async-trait = "0.1"
tempfile = "3.10"

# HTTP client for test CLI
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
futures = "0.3"

[[bin]]
name = "pdf-service"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "src/test_client.rs"
